test/fixtures/type_error/type_error.rb
def check
  Foo.new.accept_int("str")
end
